# rag-youtube-transcripts

./: .dockerignore  .gitignore  Dockerfile  LICENSE  Makefile  artifacts.dvc  docker-compose.yaml  etl_pipeline.sh  params.yaml  pyproject.toml
.dvc/: .gitignore  config
.github/workflows/: etl_pipeline.yaml
src/: config.py  logger.py  rag.py  utils.py
src/app/: endpoint.py  main.py  router.py
src/pipelines/: etl.py
src/rag_youtube_transcripts/: config.py  logger.py  rag.py  utils.py
src/rag_youtube_transcripts/app/: endpoint.py  main.py  router.py
src/rag_youtube_transcripts/pipelines/: etl.py
